--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "server:dev": "nodemon",
     "server:start": "node ./dist/server.js",
     "db:migrate": "ts-node ./src/database/migrations",
+    "db:migrate:prod": "node ./dist/database/migrations",
     "build": "tsc"
   },
   "keywords": [
